[package]
name = "uhdrtz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bevy = "0.9.1"
flume = "0.10.14"
image = "0.24.5"
nokhwa = { version = "0.10.3", features = ["input-native", "output-threaded"] }
