[package]
name = "uhdrtz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bevy = { version = "0.10.0", default-features = false, features = ["bevy_asset", "bevy_winit", "bevy_sprite", "png", "x11"] }
bevy-tokio-tasks = "0.10.0"
bevy_egui = "0.20.0"
bevy_kira_audio = { version = "0.15.0", features = ["mp3"] }
btleplug = "0.10.4"
egui = "0.21.0"
flume = "0.10.14"
futures = "0.3.26"
image = "0.24.5"
nokhwa = { version = "0.10.3", features = ["input-native", "output-threaded"] }
tokio = { version = "1.25.0", features = ["full"] }
uuid = "1.3.0"
